# familyRecipeBook

./: .gitignore  README.md  app.py  design.md  models.py  pyproject.toml  requirements.txt
familyrecipebook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/: scripts.js  style.css
templates/: base.html  edit_profile.html  error.html  index.html  login.html  new_recipe.html  profile.html  recipe.html  signup.html
